@@ -1,3 +1,9 @@
+2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/random.h: Fixed bug [1635988] by implementing the
+	twist() function in a similar way as the original TWIST() macro
+	from Takuji Nishimura's and Makoto Matsumoto's C sources.
+
 2007-01-16  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>
 
 	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Changed rand() to
